# pubky-app-specs

./: Cargo.toml  README.md  a.txt  build.sh  print_files.sh
.github/workflows/: bindings.yml  js-binding.yml  native.yml  rust.yml  wasm.yml
bindings/js/: README.md
docs/: UNICODE_NOTES.md
examples/: create_user.rs
pkg/: .gitignore  LICENSE  README.md  example.js  index.html  package.json  test.js
pkg/test/: package.json  specs.js
src/: bookmark.rs  common.rs  constants.rs  feed.rs  ffi.rs  file.rs  file_blob.rs  follow.rs  importer.rs  last_read.rs  lib.rs  limits.rs  mute.rs  post.rs  tag.rs  traits.rs  types.rs  uri_parser.rs  user.rs  utils.rs  version.rs  wasm.rs
src/models/: blob.rs  bookmark.rs  collection_pointer.rs  feed.rs  file.rs  file_blob.rs  follow.rs  last_read.rs  mod.rs  mute.rs  post.rs  tag.rs  user.rs
tests/: web.rs
